Tic tac toe is fixed on mobile

--- a/src/main/resources/static/css/game/tic-tac-toe.css
+++ b/src/main/resources/static/css/game/tic-tac-toe.css
@@ -21,5 +21,32 @@ img.role {
 }
 canvas {
     position: absolute;
-    left: 30%;
+}
+@media only screen and (min-width: 600px) {
+  canvas {
+      left: 30%;
+  }
+}
+@media only screen and (max-width: 600px) {
+  canvas {
+    top: 85%;
+  }
+  #chatbox {
+    top: 0%;
+  }
+  #player-on-turn {
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+  #users {
+    display: flex;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+  button {
+    position: absolute;
+    top: 60%;
+  }
 }
